# lang-hybrid-pdf

./: .gitignore  README.md  pyproject.toml
src/lang_hybrid_pdf/: __init__.py  extractor_router.py  helpers.py  hybrid_pdf_loader.py  image_layout_ocr.py  settings.py  text_docling.py
tests/: test_loader.py
